--- a/style.css
+++ b/style.css
@@ -6,40 +6,49 @@
 html, body {
     height: 100%;
     width: 100%;
-    background-color: black;
+    background-color: rgb(255, 255, 255);
 }
 
 header {
-    background-color: rgb(165, 139, 4);
+    background-color: rgb(166, 166, 166);
     color: black;
     text-align: center;
     width: 100%;
+    height: 30%;
+    font-size: 300%;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
 
 main {
-    background-color: red;
     color: black;
     width: 100%;
     padding: 20px; 
 }
 
 main>section {
-    background-color: red;
     color: black;
     width: 100%;
     padding: 20px; 
     display: flex; 
     justify-content: center; 
     align-items: center; 
+    margin-top: 0px;
+    gap: 50px;
+    margin-left: -5%;
+}
+
+main>section>p {
+    width: 70%;
+    font-size: 150%
 }
 
 img {
     width: 200px;                 
     margin-bottom: 20px;
+    border-radius: 20%;
 }
 
 footer {
-    background-color: rgb(52, 71, 94);
     color: black;
     text-align: center;
     width: 100%;
