--- a/style.css
+++ b/style.css
@@ -54,3 +54,63 @@ footer {
     width: 100%;
     padding: 10px;
 }
+
+@media (max-width: 425px) {
+        * {
+        margin: 0;
+        padding: 0;
+    }
+
+    html, body {
+        height: 100%;
+        width: 100%;
+        background-color: rgb(255, 255, 255);
+    }
+
+    header {
+        background-color: rgb(166, 166, 166);
+        color: black;
+        text-align: center;
+        width: 100%;
+        height: 15%;
+        font-size: 100%;
+        font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    }
+
+    main {
+        color: black;
+        width: 100%;
+        padding: 20px; 
+    }
+
+    main>section {
+        color: black;
+        width: 100%;
+        padding: 20px; 
+        display: flex; 
+        flex-direction: column;
+        justify-content: center; 
+        align-items: center; 
+        margin-top: 10px;
+        gap: 30px;
+        margin-left: -5%;
+    }
+
+    main>section>p {
+        width: 70%;
+        font-size: 150%
+    }
+
+    img {
+        width: 250px;                 
+        margin-bottom: 20px;
+        border-radius: 20%;
+    }
+
+    footer {
+        color: black;
+        text-align: center;
+        width: 100%;
+        padding: 10px;
+    }
+ }
