--- a/style.css
+++ b/style.css
@@ -55,7 +55,7 @@ footer {
     padding: 10px;
 }
 
-@media (max-width: 768px) {
+@media (aspect-ratio: 16/9) {
         * {
         margin: 0;
         padding: 0;
