--- a/style.css
+++ b/style.css
@@ -55,7 +55,7 @@ footer {
     padding: 10px;
 }
 
-@media (max-width:768px){
+@media (max-width:768px)
         * {
         margin: 0;
         padding: 0;
@@ -113,4 +113,4 @@ footer {
         width: 100%;
         padding: 10px;
     }
- }
+ 
