--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@
 }
 
 html, body {
+    overflow-x: hidden;
     height: 100%;
     width: 100%;
     background-color: rgb(255, 255, 255);
@@ -86,7 +87,7 @@ footer {
     main>section {
         color: black;
         width: 100%;
-        padding: 0px; 
+        padding-left: 0px; 
         display: flex; 
         flex-direction: column;
         justify-content: center; 
@@ -94,6 +95,7 @@ footer {
         margin-top: 10px;
         gap: 30px;
         margin-left: 0%;
+        border: 0px;
     }
 
     main>section>p {
