--- a/style.css
+++ b/style.css
@@ -63,6 +63,7 @@ footer {
     }
 
     html, body {
+        overflow-x: hidden;
         height: 100%;
         width: 100%;
         background-color: rgb(255, 255, 255);
