--- a/style.css
+++ b/style.css
@@ -60,6 +60,7 @@ footer {
         * {
         margin: 0;
         padding: 0;
+        box-sizing: border-box;
     }
 
     html, body {
@@ -94,7 +95,7 @@ footer {
         justify-content: center; 
         align-items: center; 
         margin-top: 10px;
-        gap: 30px;
+        gap: 20px;
         margin-left: 0%;
         border: 0px;
     }
